Bug 1162333 - Add stronger assertions to PromiseWorkerProxy in debug builds. r=catalinb

--HG--
extra : commitid : 2jVPtywuF92
extra : rebase_source : 85d8854a7f3eec8c1fd31ed0e57f33d3b83a2d04